--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      node: nodejs16
+      nodejs: 16
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
